# mailing_service

./: .env.example  .gitignore  pyproject.toml
config/: settings.py  urls.py
mailings/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailings/management/commands/: send_mailings.py
mailings/migrations/: 0001_initial.py  0002_user_alter_client_owner_alter_mailing_owner_and_more.py  0003_mailing_is_enabled.py
mailings/templates/mailings/: base.html  index.html  mailing_list.html  user_list.html  user_statistics.html
mailings/templates/registration/: login.html  password_reset_email.html  password_reset_form.html  profile.html  register.html  registration_done.html
